first fix Header: Logo is too wide

--- a/styles/Header.css
+++ b/styles/Header.css
@@ -70,7 +70,6 @@
   max-width: 30rem; /* Ensure the logo doesn't exceed its container */
   padding-left: 0px;
   margin-left: 0px;
-  flex: 1;
 }
 
 .header-mentorship-intro {
